combined RdfIO and RdfConverter